feat(avatar): added avatar

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://KskPLab.github.io/portofolio",
+  "homepage": "https://KskPLab.github.io/portofolio/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.1",
     "aos": "^2.3.4",
     "react": "^18.3.1",
